Feat: Add JPA annotations and DTO