@@ -9,14 +9,14 @@
     <version>1.0-SNAPSHOT</version>
 
     <properties>
-        <maven.compiler.source>21</maven.compiler.source>
-        <maven.compiler.target>21</maven.compiler.target>
+        <maven.compiler.release>21</maven.compiler.release>
         <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
         <spring-webmvc.version>6.1.13</spring-webmvc.version>
         <tomcat.version>10.1.29</tomcat.version>
         <jackson.version>2.17.2</jackson.version>
         <spring-data-jpa.version>3.3.3</spring-data-jpa.version>
         <hibernate-core.version>6.5.2.Final</hibernate-core.version>
+        <mapstruct.version>1.6.0</mapstruct.version>
         <postgresql.version>42.7.4</postgresql.version>
         <logback.version>1.5.6</logback.version>
         <lombok.version>1.18.34</lombok.version>
@@ -48,9 +48,14 @@
             <version>${spring-data-jpa.version}</version>
         </dependency>
         <dependency>
-            <groupId>org.hibernate</groupId>
+            <groupId>org.hibernate.orm</groupId>
             <artifactId>hibernate-core</artifactId>
             <version>${hibernate-core.version}</version>
+        </dependency>
+        <dependency>
+            <groupId>org.mapstruct</groupId>
+            <artifactId>mapstruct</artifactId>
+            <version>${mapstruct.version}</version>
         </dependency>
         <dependency>
             <groupId>org.postgresql</groupId>
@@ -76,11 +81,6 @@
                 <groupId>org.apache.maven.plugins</groupId>
                 <artifactId>maven-compiler-plugin</artifactId>
                 <version>${maven-compiler-plugin.version}</version>
-                <configuration>
-                    <compilerArgs>
-                        <arg>-proc:full</arg>
-                    </compilerArgs>
-                </configuration>
                 <executions>
                     <execution>
                         <id>default-compile</id>
@@ -91,7 +91,20 @@
                                     <artifactId>lombok</artifactId>
                                     <version>${lombok.version}</version>
                                 </path>
+                                <path>
+                                    <groupId>org.mapstruct</groupId>
+                                    <artifactId>mapstruct-processor</artifactId>
+                                    <version>${mapstruct.version}</version>
+                                </path>
                             </annotationProcessorPaths>
+                            <compilerArgs>
+                                <arg>
+                                    -Amapstruct.defaultComponentModel=spring
+                                </arg>
+                                <arg>
+                                    -Amapstruct.unmappedTargetPolicy=IGNORE
+                                </arg>
+                            </compilerArgs>
                         </configuration>
                     </execution>
                 </executions>
